@@ -1,3 +1,9 @@
+2018-09-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* index.php,
+	  previous.php:
+	  Added News - SDC 3.8.0 release.
+
 2018-09-17 Philipp Klaus Krause <pkk AT spth.de>
 
 	* index.php:
